# clipspyx

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  agenda.c  agenda.h  bmathfun.c  constant.h  crstrtgy.c  factgoal.c  filertr.c  inscom.c  makefile  miscfun.c  modulbin.c  pyproject.toml  setup.py  symblbin.c  symbol.h  sysdep.c  sysdep.h
.github/workflows/: wheels.yml
backends/ffi/: pyproject.toml
backends/ffi-64x/: pyproject.toml  setup.py
backends/ffi-64x/clipspyx_ffi_64x/: _build.py
backends/ffi-70x/: pyproject.toml  setup.py
backends/ffi-70x/clipspyx_ffi_70x/: _build.py
backends/ffi-70x/patches/: bload-init-hashmap.patch
backends/ffi/clipspyx_ffi/: __init__.py  build.py  clips-70x.cdef  clips.cdef
clipspyx/: __init__.py  agenda.py  async_goals.py  classes.py  clips.cdef  clipspyx_build.py  common.py  environment.py  fact_events.py  facts.py  functions.py  loops.py  meta.py  modules.py  periodic.py  routers.py  sigint.py  tables.py  tracing.py  values.py
clipspyx/_clipspyx/: __init__.py
clipspyx/dsl/: __init__.py  codegen.py  define.py  ir.py  ordering.py  parser.py  rule.py  template.py  timer.py  types.py  visualize.py
docs/: async-goals.md  dsl.md  extensions.md  reasoning-guide.md  test_examples.py  test_reasoning_guide.py
docs/clips-reference/64x/: AGENTS.md
docs/clips-reference/64x/advanced/: 00-preface.md  02-installing-and-tailoring-clips.md  04-calling-functions-and-building-constructs.md  05-garbage-collection.md  06-creating-primitive-values.md  08-user-defined-functions.md  09-io-routers.md  10-environments.md  11-creating-a-clips-runtime-program.md  12-embedding-clips.md  zz-index.md
docs/clips-reference/64x/basic/: 00-license-information.md  00-preface.md  01-introduction.md  02-clips-overview.md  03-deftemplate-construct.md  04-deffacts-construct.md  05-defrule-construct.md  06-defglobal-construct.md  07-deffunction-construct.md  08-generic-functions.md  09-clips-object-oriented-language.md  10-defmodule-construct.md  11-constraint-attributes.md  12-actions-and-functions.md  13-commands.md  appendix-b-update-release-notes.md  appendix-c-glossary.md  appendix-d-performance-considerations.md  appendix-e-clips-warning-messages.md  appendix-f-clips-error-messages.md  appendix-g-clips-bnf.md  appendix-h-reserved-function-names.md  zz-index.md
docs/clips-reference/64x/interfaces/: 00-preface.md  01-introduction.md  02-clips-net-ide.md  03-clips-macos-ide.md  04-clips-swing-ide.md  05-clips-dll-interface.md  06-clips-net-interface.md  07-clips-java-native-interface.md  appendix-b-update-release-notes.md  zz-index.md
docs/clips-reference/64x/media/media/: image3.emf  image4.emf  image5.emf  image9.emf
docs/clips-reference/70x/: AGENTS.md
docs/clips-reference/70x/advanced/: 00-preface.md  01-introduction.md  02-installing-and-tailoring-clips.md  03-core-functions.md  07-creating-and-modifying-facts-and-instances.md  08-user-defined-functions.md  appendix-b-update-release-notes.md  zz-index.md
docs/clips-reference/70x/basic/: 00-license-information.md  00-preface.md  01-introduction.md  02-clips-overview.md  03-deftemplate-construct.md  04-deffacts-construct.md  05-defrule-construct.md  06-defglobal-construct.md  07-deffunction-construct.md  08-generic-functions.md  09-clips-object-oriented-language.md  10-defmodule-construct.md  11-constraint-attributes.md  12-deftable-construct.md  13-actions-and-functions.md  14-commands.md  appendix-b-update-release-notes.md  appendix-c-glossary.md  appendix-d-performance-considerations.md  appendix-f-clips-error-messages.md  appendix-g-clips-bnf.md  appendix-h-reserved-function-names.md  zz-index.md
docs/clips-reference/70x/interfaces/: 00-preface.md  02-clips-net-ide.md  03-clips-macos-ide.md  04-clips-swing-ide.md  05-clips-dll-interface.md  06-clips-net-interface.md  07-clips-java-native-interface.md  appendix-a-support-information.md  appendix-b-update-release-notes.md  zz-index.md
docs/clips-reference/70x/media/media/: image6.emf  image7.emf
examples/: hr_system.py
scripts/: build-backend.py  bump-version.py  sync-svn.py
tests/: _ordering_helper.py  test_70x.py  test_agenda.py  test_async_goals.py  test_async_runner_stateful.py  test_auto_wake.py  test_classes.py  test_dsl.py  test_environment.py  test_fact_events.py  test_facts.py  test_functions.py  test_loops.py  test_meta.py  test_modules.py  test_multifield.py  test_ordering_multimodule.py  test_periodic.py  test_sigint.py  test_tracing.py  test_visualize.py
