[project]
name = "clipspyx"
version = "0.5.0"
description = "CLIPS Python bindings via CFFI"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/inferal-oss/clipspyx"
Repository = "https://github.com/inferal-oss/clipspyx"
Issues = "https://github.com/inferal-oss/clipspyx/issues"

[project.optional-dependencies]
64x = ["clipspyx-ffi-64x==0.3.0"]
70x = ["clipspyx-ffi-70x==0.3.0"]
dsl = [
    "libcst>=1.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["clipspyx*"]

[tool.uv]
conflicts = [
    [{ extra = "64x" }, { extra = "70x" }],
]

[tool.uv.workspace]
members = ["backends/*"]

[tool.uv.sources]
clipspyx-ffi = { workspace = true }
clipspyx-ffi-64x = { workspace = true }
clipspyx-ffi-70x = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.0.0"]
