[project]
name = "clipspyx-ffi-64x"
version = "0.10.2"
description = "CLIPS 6.4x CFFI extension for clipspyx"
license = "BSD-3-Clause"
requires-python = ">=3.10"
dependencies = ["cffi>=1.0.0", "clipspyx-ffi==0.10.2"]

[project.urls]
Homepage = "https://github.com/inferal-oss/clipspyx"
Repository = "https://github.com/inferal-oss/clipspyx"

[build-system]
requires = ["setuptools>=42", "cffi>=1.0.0", "clipspyx-ffi==0.10.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["clipspyx_ffi_64x*"]
