[project]
name = "clipspyx-ffi"
version = "0.1.0"
description = "Shared CFFI build infrastructure for clipspyx"
license = "BSD-3-Clause"
requires-python = ">=3.10"
dependencies = ["cffi>=1.0.0"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["clipspyx_ffi*"]

[tool.setuptools.package-data]
clipspyx_ffi = ["*.cdef"]
