[project]
name = "clipspyx-ffi"
version = "0.10.5"
description = "Shared CFFI build infrastructure for clipspyx"
license = "BSD-3-Clause"
requires-python = ">=3.10"
dependencies = ["cffi>=1.0.0"]

[project.urls]
Homepage = "https://github.com/inferal-oss/clipspyx"
Repository = "https://github.com/inferal-oss/clipspyx"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["clipspyx_ffi*"]

[tool.setuptools.package-data]
clipspyx_ffi = ["*.cdef"]
